fixed toggle collapse for navbar

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -33,9 +33,6 @@ body{
     background-color: #ecf0f1;
     color: #3498db;
 }
-.navbar{
-	height: 45px;
-}
 .btn-primary {
   background-color: #FF0000;
 }
